Fixed unwanted style inheritance when styling elements like: 'a {}' via wrapping those styles in .wrapper, as it will be replaced as .wrapper{random_text} to distinguish one component's wrapper from another

--- a/em_potential_solver/src/components/navbar/navbar.module.css
+++ b/em_potential_solver/src/components/navbar/navbar.module.css
@@ -20,7 +20,7 @@
   border-radius: 0 0 5px 5px; */
 }
 
-a {
+.wrapper a {
   background-color: var(--bg-ui);
   padding: 1rem;
   min-width: 20%;
@@ -35,7 +35,7 @@ a {
   cursor: pointer;
 }
 
-a:hover {
+.wrapper a:hover {
   background-color: var(--bg-ui-hover);
   font-weight: bold;
 }
